--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -26,27 +26,38 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.540.0",
+    "@noble/secp256k1": "^3.0.0",
     "@prisma/client": "^5.9.1",
     "@sendgrid/mail": "^8.1.3",
+    "@sentry/node": "^10.27.0",
+    "@sentry/tracing": "^7.120.4",
     "axios": "^1.6.5",
     "bcrypt": "^5.1.1",
+    "bs58check": "^4.0.0",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.3.1",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.2.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.13",
+    "p-queue": "^9.0.1",
+    "p-retry": "^7.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
+    "validator": "^13.15.23",
     "winston": "^3.11.0",
+    "xss-clean": "^0.1.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -58,11 +69,15 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "@types/validator": "^13.15.10",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0",
+    "nock": "^14.0.10",
     "prisma": "^5.9.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "wait-for-expect": "^4.0.0"
   }
 }
