--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -49,6 +49,7 @@
     "nodemailer": "^6.9.13",
     "p-queue": "^9.0.1",
     "p-retry": "^7.1.0",
+    "secp256k1": "^5.0.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "validator": "^13.15.23",
@@ -66,6 +67,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
     "@types/nodemailer": "^6.4.14",
+    "@types/secp256k1": "^4.0.7",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
