Implement NEAR Intents cross-chain payment integration
Added cross-chain payment support via NEAR Intents, enabling users to pay
with any token (USDC, ETH, SOL, BTC) while merchants receive ZEC privately.

New Features:
- NearIntentsService for NEAR 1Click API integration
- Cross-chain payment intent creation and monitoring
- Support for 150+ tokens across Ethereum, Solana, Bitcoin, NEAR
- Automatic token → ZEC conversion via NEAR market makers
- Real-time swap status tracking
- Comprehensive API documentation and examples

API Endpoints:
- POST /api/v1/near-payments/intents - Create cross-chain payment
- POST /api/v1/near-payments/deposit - Submit deposit tx (optional)
- GET /api/v1/near-payments/status/:id - Check swap status
- GET /api/v1/near-payments/supported-tokens - List available tokens

Database:
- Added NearIntent model for tracking cross-chain payments
- Relations with PaymentIntent and Merchant models

Documentation:
- NEAR_INTENTS_INTEGRATION.md - Complete integration guide
- NEAR_INTEGRATION_SUMMARY.md - Implementation overview
- NEAR_QUICKSTART.md - Quick start guide
- Code examples for Node.js and React

Benefits:
- Removes ZEC acquisition barrier for users
- Maintains privacy (shielded ZEC endpoint)
- Enables mainstream adoption of Z402
- Qualifies for NEAR hackathon bounty

--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -25,6 +25,12 @@ ZCASH_RPC_USER=zcashrpc
 # IMPORTANT: Use a strong password for Zcash RPC!
 ZCASH_RPC_PASSWORD=CHANGE_THIS_STRONG_PASSWORD
 
+# NEAR Intents (Cross-chain Payments)
+# Leave blank to use default: https://1click.chaindefuser.com
+NEAR_INTENTS_API_URL=
+# Optional: JWT token to avoid 0.1% fee (get from https://forms.gle/your-form-id)
+ONE_CLICK_JWT=
+
 # API Key Encryption
 API_KEY_ENCRYPTION_KEY=your-api-key-encryption-key-change-this-in-production
 
