--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -31,8 +31,9 @@
     "@sendgrid/mail": "^8.1.3",
     "@sentry/node": "^10.27.0",
     "@sentry/tracing": "^7.120.4",
-    "axios": "^1.6.5",
-    "bcrypt": "^5.1.1",
+    "@types/axios": "^0.14.4",
+    "axios": "^1.13.2",
+    "bcrypt": "^6.0.0",
     "bs58check": "^4.0.0",
     "cors": "^2.8.5",
     "cron": "^3.1.6",
